refactor player. add tests

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,8 @@
 sourceCompatibility = 1.7
+dependencies {
+    // Required for local unit tests (JUnit 4 framework)
+    testImplementation 'junit:junit:4.12'
+}
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
